we got movement on the arrow keys

--- a/style.css
+++ b/style.css
@@ -14,3 +14,11 @@ td {
     padding: 15px;
     background-color: rgb(52, 67, 80);
 }
+
+.snake {
+    background-color: #6b6;
+}
+
+.food {
+    background-color: #cc0;
+}
